feat: merge dividend transaction occured at the same day